--- a/backup/Learning Project/app/src/main/res/layout/activity_cadastro.xml
+++ b/backup/Learning Project/app/src/main/res/layout/activity_cadastro.xml
@@ -58,9 +58,9 @@
         android:textColor="@color/textWhite"
         android:background="@drawable/button_stroke"
         android:text="@string/cadastrar"
-        android:layout_marginTop="34dp"
         android:layout_below="@+id/senhaEntradaID"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="68dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -94,5 +94,16 @@
         android:layout_marginTop="16dp"
         android:text="@string/senha"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/avisoID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_below="@+id/senhaEntradaID"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
