--- a/backup/Learning Project/app/src/main/res/layout/activity_login.xml
+++ b/backup/Learning Project/app/src/main/res/layout/activity_login.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
-        android:layout_below="@+id/tSenha"
+        android:layout_below="@+id/AvisoID"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp" />
+        android:layout_marginTop="17dp" />
 
 
     <Button
@@ -65,6 +65,18 @@
         android:ems="12"
         android:textColor="@color/textWhite"
         android:inputType="textPassword" />
+
+    <TextView
+        android:id="@+id/AvisoID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tSenha"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="16sp" />
 
 
     <ImageView
