Muitas mudanças. Muitas mudanças mesmo.
Essa versão já tem o update de Nícolas, com as melhorias dele. Além, tem melhorias adicionais.

Primeiro, note as mudanças da sessão, com a separação de método iniciaSessao() em defineSessao() e iniciaSessao(), além de um novo parâmetro "EMAIL". Você pode entender a necessidade ao ler a essência do código dessa minha parte.

Criação de perfil já funciona. Porém, ainda não sei como serão guardadas as coisas das habilidades. Por isso você a define na página de criação e não vê seu nome e descrição na página principal (isso seria somente uma forma de visualizar).

Note que apenas uma habilidade é setada na criação. As demais devem ser setadas nas configurações, e talvez nem aconteça nessa versão.

Devo ter esquecido de algo, mas creio que esses são os pontos principais. Todo o resto será falado por mim no próximo hangout.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/logout"
-        android:layout_marginBottom="13dp"
+        android:layout_marginBottom="86dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="17dp"
-        android:layout_marginEnd="17dp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/apresentacaoID"
@@ -37,8 +34,8 @@
         android:textColor="@color/textWhite"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:layout_marginTop="95dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
