--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
+        android:layout_marginTop="32dp"
         android:layout_below="@+id/tSenha"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp" />
+        android:layout_centerHorizontal="true" />
 
 
     <Button
@@ -22,18 +22,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cadastrar"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="29dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:textColor="@color/textWhite"
-        android:background="@drawable/button_stroke"/>
+        android:background="@drawable/button_stroke"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/btLogin"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         style="@style/camposTexto"
         android:id="@+id/textView4"
         android:text="@string/email"
+        android:layout_marginTop="31dp"
         android:layout_below="@+id/imageView2"
         android:layout_alignRight="@+id/textView5"
         android:layout_alignEnd="@+id/textView5" />
