--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#03A9F4</color>
-    <color name="colorAccent">#212121</color>
+    <color name="colorSecondary">#4CAF50</color>
+    <color name="colorAccent">#ED7D3A</color>
     <color name="textBlack">#212121</color>
     <color name="textgray">#757575</color>
     <color name="textWhite">#fff</color>
