--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,12 +8,13 @@
 
     <Button
         android:id="@+id/btLogin"
-        style="@style/btn_white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:layout_marginTop="32dp"
         android:layout_below="@+id/tSenha"
+        android:textColor="@color/textWhite"
+        android:background="@drawable/button_stroke"
         android:layout_centerHorizontal="true" />
 
 
