--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -1,99 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/gradient"
-    tools:context=".usuario.gui.CadastroActivity">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@drawable/gradient"
+	tools:context=".usuario.gui.CadastroActivity">
+
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical"
+	android:padding="25dp">
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/logo"
         android:scaleType="fitXY"
-        android:layout_marginTop="29dp"
-        android:id="@+id/imageView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/logo" />
 
-    <EditText
-        android:id="@+id/nomeEntradaID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="12"
-        android:inputType="textPersonName"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
+    <android.support.design.widget.TextInputLayout
+		android:id="@+id/input_layout_nome"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="10dp">
 
-    <EditText
-        android:id="@+id/emailEntradaID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/nomeEntradaID"
-        android:layout_alignRight="@+id/nomeEntradaID"
-        android:layout_below="@+id/nomeEntradaID"
-        android:layout_marginTop="31dp"
-        android:ems="12"
-        android:inputType="textEmailAddress" />
+        <EditText
+            android:id="@+id/nomeEntradaID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/nome"
+            android:inputType="textPersonName"
+			android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/senhaEntradaID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/emailEntradaID"
-        android:layout_alignStart="@+id/emailEntradaID"
-        android:layout_below="@+id/emailEntradaID"
-        android:layout_marginTop="38dp"
-        android:ems="12"
-        android:inputType="textPassword" />
+	</android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/botaoCadastroID"
-        style="@style/btn_white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textColor="@color/textWhite"
-        android:background="@drawable/button_stroke"
-        android:text="@string/cadastrar"
-        android:layout_marginTop="22dp"
-        android:layout_below="@+id/senhaEntradaID"
-        android:layout_centerHorizontal="true" />
+	<android.support.design.widget.TextInputLayout
+		android:id="@+id/input_layout_email"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="10dp">
 
-    <TextView
-        android:id="@+id/textView"
-        style="@style/camposTexto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nome"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+		<EditText
+			android:id="@+id/emailEntradaID"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:inputType="textEmailAddress"
+			android:hint="@string/email"
+			android:textSize="20sp"/>
 
-    <TextView
-        android:id="@+id/textView2"
-        style="@style/camposTexto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nomeEntradaID"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="11dp"
-        android:text="@string/email"
-        android:textSize="18sp" />
+	</android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:id="@+id/textView3"
-        style="@style/camposTexto"
+	<android.support.design.widget.TextInputLayout
+		android:id="@+id/input_layout_senha"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="10dp">
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/emailEntradaID"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="@string/senha"
-        android:textSize="18sp" />
+		<EditText
+			android:id="@+id/senhaEntradaID"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:inputType="textPassword"
+			android:hint="@string/senha"
+			android:textSize="20sp" />
 
-</RelativeLayout>
+	</android.support.design.widget.TextInputLayout>
+
+	<Button
+		android:id="@+id/botaoCadastroID"
+		style="@style/btn_white"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:paddingLeft="10dp"
+		android:paddingRight="10dp"
+		android:textColor="@color/textWhite"
+		android:background="@drawable/button_stroke"
+		android:text="@string/cadastrar"
+		android:layout_marginTop="40dp" />
+</LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
