--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,82 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context="com.thelearningproject.applogin.usuario.gui.LoginActivity">
+    tools:context=".usuario.gui.CadastroActivity">
 
-    <Button
-        android:id="@+id/btLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:layout_marginTop="32dp"
-        android:layout_below="@+id/tSenha"
-        android:textColor="@color/textWhite"
-        android:background="@drawable/button_stroke"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp">
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="fitXY"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo" />
 
-    <Button
-        android:id="@+id/cadastroID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cadastrar"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textColor="@color/textWhite"
-        android:background="@drawable/button_stroke"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/btLogin"
-        android:layout_centerHorizontal="true" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
 
-    <TextView
-        style="@style/camposTexto"
-        android:id="@+id/textView4"
-        android:text="@string/email"
-        android:layout_marginTop="31dp"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignRight="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5" />
+            <EditText
+                android:id="@+id/tLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/email"
+                android:textSize="20sp"/>
 
-    <EditText
-        android:id="@+id/tLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true"
-        android:ems="12"
-        android:textColor="@color/textWhite"
-        android:inputType="textEmailAddress" />
+        </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        style="@style/camposTexto"
-        android:id="@+id/textView5"
-        android:layout_marginTop="15dp"
-        android:text="@string/senha"
-        android:layout_below="@+id/tLogin" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_senha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
 
-    <EditText
-        android:id="@+id/tSenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tLogin"
-        android:layout_alignStart="@+id/tLogin"
-        android:layout_below="@+id/textView5"
-        android:ems="12"
-        android:textColor="@color/textWhite"
-        android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/tSenha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="@string/senha"
+                android:textSize="20sp" />
 
+        </android.support.design.widget.TextInputLayout>
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logo"
-        android:scaleType="fitXY"
-        android:layout_marginTop="24dp"
-        android:id="@+id/imageView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/btLogin"
+            style="@style/btn_white"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@color/colorPrimary"
+            android:text="@string/login"
+            android:layout_marginTop="30dp" />
 
-</RelativeLayout>
+        <View style="@style/Divider"></View>
+
+        <Button
+            android:id="@+id/cadastroID"
+            style="@style/btn_white"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@color/textWhite"
+            android:background="@drawable/button_stroke"
+            android:text="@string/cadastrar"
+            android:layout_marginTop="20dp" />
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
