--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -26,13 +26,13 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="10dp">
 
-        <EditText
-            android:id="@+id/nomeEntradaID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/nome"
-            android:inputType="textPersonName"
+		<EditText
+			android:id="@+id/nomeEntradaID"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:hint="@string/nome"
+			android:inputType="textPersonName"
 			android:textSize="20sp" />
 
 	</android.support.design.widget.TextInputLayout>
@@ -80,6 +80,13 @@
 		android:background="@drawable/button_stroke"
 		android:text="@string/cadastrar"
 		android:layout_marginTop="40dp" />
+
+	<TextView
+		android:id="@+id/theLearnProjectId"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="The Learning Project"
+		android:textAlignment="center" />
 </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
