--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,14 @@
 
         </android.support.design.widget.TextInputLayout>
 
+
+        <Switch
+            android:id="@+id/manterSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/manterConectado" />
+
         <Button
             android:id="@+id/btLogin"
             style="@style/btn_white"
