--- a/app/src/main/res/layout/activity_habilidade.xml
+++ b/app/src/main/res/layout/activity_habilidade.xml
@@ -51,8 +51,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:textColor="@color/textWhite"
-        android:background="@drawable/button_stroke"
+        android:textSize="14sp"
+        android:textColor="@color/colorPrimary"
         android:text="@string/continuar"
         android:layout_marginTop="53dp"
         android:layout_below="@+id/descricaoentrada"
