--- a/app/src/main/res/layout/activity_busca.xml
+++ b/app/src/main/res/layout/activity_busca.xml
@@ -21,12 +21,14 @@
         android:id="@+id/editTextBuscaID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="19dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp" />
 
     <Button
         android:id="@+id/botaoBuscaID"
