--- a/app/src/main/res/layout/activity_configuracao.xml
+++ b/app/src/main/res/layout/activity_configuracao.xml
@@ -1,49 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".infra.gui.ConfiguracaoActivity">
+
+    <TextView
+        android:id="@+id/op1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Alterar dados"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="17dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/deletarID"
+        android:layout_alignStart="@+id/deletarID" />
 
     <Button
         android:id="@+id/alterarID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/alterar"
-        android:layout_marginTop="36dp"
         android:layout_below="@+id/senhaID"
-        android:layout_toRightOf="@+id/voltarID"
-        android:layout_toEndOf="@+id/voltarID" />
+        android:layout_alignLeft="@+id/senhaID"
+        android:layout_alignStart="@+id/senhaID"
+        android:layout_marginTop="31dp"
+        android:layout_alignRight="@+id/senhaID"
+        android:layout_alignEnd="@+id/senhaID" />
 
     <Button
         android:id="@+id/deletarID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/deletar"
-        android:layout_marginRight="43dp"
-        android:layout_marginEnd="43dp"
+        android:text="@string/excluir"
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:textColor="@color/textWhite"
+        android:layout_marginBottom="51dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="29dp" />
+        android:layout_alignLeft="@+id/alterarID"
+        android:layout_alignStart="@+id/alterarID" />
+
+    <Button
+        android:id="@+id/LogoutID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        android:backgroundTint="@android:color/secondary_text_light"
+        android:textColor="@color/textWhite"
+        android:layout_alignBaseline="@+id/deletarID"
+        android:layout_alignBottom="@+id/deletarID"
+        android:layout_alignRight="@+id/alterarID"
+        android:layout_alignEnd="@+id/alterarID" />
 
     <EditText
         android:id="@+id/nomeID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="53dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
+        android:layout_marginTop="13dp"
+        android:ems="14"
         android:hint="@string/nome"
         android:inputType="textPersonName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/op1"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/emailID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:ems="10"
+        android:ems="14"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:layout_below="@+id/nomeID"
@@ -54,23 +80,24 @@
         android:id="@+id/senhaID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="14"
         android:hint="@string/senha"
         android:inputType="textPassword"
         android:layout_below="@+id/emailID"
         android:layout_alignLeft="@+id/emailID"
         android:layout_alignStart="@+id/emailID"
-        android:layout_marginTop="13dp" />
+        android:layout_marginTop="17dp" />
 
-    <Button
-        android:id="@+id/voltarID"
+    <TextView
+        android:id="@+id/op2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/voltar"
-        android:layout_marginLeft="26dp"
-        android:layout_marginStart="26dp"
-        android:layout_alignBaseline="@+id/deletarID"
-        android:layout_alignBottom="@+id/deletarID"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="Outras opções"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_above="@+id/deletarID"
+        android:layout_alignLeft="@+id/deletarID"
+        android:layout_alignStart="@+id/deletarID"
+        android:layout_marginBottom="13dp" />
+
 </RelativeLayout>
