--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient">
-
-    <Button
-        android:id="@+id/LogoutID"
-        style="@style/btn_white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/logout"
-        android:layout_marginBottom="61dp"
-        android:layout_above="@+id/configID"
-        android:layout_centerHorizontal="true" />
+    tools:context=".infra.gui.MainActivity">
 
     <TextView
         android:id="@+id/apresentacaoID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="apresentacao"
-        android:textColor="@color/textWhite"
-        android:textSize="25sp"
+        android:textSize="26sp"
         android:textStyle="italic"
-        android:layout_below="@+id/projectName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="93dp" />
-
-    <TextView
-        android:id="@+id/projectName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/textWhite"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:layout_marginTop="95dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/configID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:text="@string/config"
-        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="88dp"
+        android:layout_above="@+id/btnChamar"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/botaoBuscaID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="21dp"
         android:text="Buscar"
-        android:layout_above="@+id/LogoutID"
+        android:layout_marginBottom="12dp"
+        android:layout_above="@+id/BotaoCadastraMateriaID"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/BotaoCadastraMateriaID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Inserir habilidade"
+        android:layout_marginBottom="10dp"
         android:layout_above="@+id/configID"
-        android:layout_centerHorizontal="true"
-        android:text="Inserir Materia" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/btnChamar"
@@ -71,11 +50,11 @@
         android:text="Abrir"
         android:backgroundTint="@android:color/holo_purple"
         android:textColor="@color/textWhite"
-        android:layout_marginRight="21dp"
-        android:layout_marginEnd="21dp"
-        android:layout_above="@+id/LogoutID"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="26dp" />
+        android:layout_marginBottom="13dp" />
 
 </RelativeLayout>
