--- a/app/src/main/res/layout/activity_termos.xml
+++ b/app/src/main/res/layout/activity_termos.xml
@@ -25,7 +25,7 @@
         android:text="@string/texto"
         android:gravity="center"
         android:textSize="20sp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="18dp"
         android:layout_below="@+id/imageView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -37,11 +37,23 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:textColor="@color/textWhite"
-        android:background="@drawable/button_stroke"
+        android:textColor="@color/colorPrimary"
         android:text="@string/continuar"
-        android:layout_marginTop="48dp"
+        android:textSize="14sp"
         android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp" />
+
+    <TextView
+        android:id="@+id/theLearnProjectId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="The Learning © Project 2017"
+        android:textSize="15sp"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="13dp" />
 
 </RelativeLayout>
