--- a/app/src/main/res/layout/activity_configuracao.xml
+++ b/app/src/main/res/layout/activity_configuracao.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".infra.gui.ConfiguracaoActivity">
+    tools:contexto=".infraestrutura.gui.ConfiguracaoActivity">
 
     <TextView
         android:id="@+id/op1"
