--- a/app/src/main/res/layout/activity_habilidade.xml
+++ b/app/src/main/res/layout/activity_habilidade.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".usuario.gui.CadastroActivity">
+    tools:contexto=".usuario.gui.CadastroActivity">
 
     <ImageView
         android:layout_width="150dp"
