--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".usuario.gui.CadastroActivity">
+    tools:contexto=".usuario.gui.CadastroActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -51,7 +51,6 @@
                 android:textSize="20sp" />
 
         </android.support.design.widget.TextInputLayout>
-
 
         <Switch
             android:id="@+id/manterSwitch"
