--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:background">#fff</item>
         <item name="android:textStyle">bold</item>
     </style>
