--- a/app/src/main/res/layout/activity_necessidade.xml
+++ b/app/src/main/res/layout/activity_necessidade.xml
@@ -48,7 +48,7 @@
         style="@style/camposTexto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/necessidade"
+        android:text="@string/necessidades"
         android:layout_marginTop="50dp"
         android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true" />
