--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,7 @@
         <item name="android:paddingTop">16dp</item>
         <item name="android:paddingBottom">10dp</item>
         <item name="android:paddingLeft">16dp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">#222</item>
     </style>
 
