aprimoramento de algumas funções e um ajuste de arquitetura

--- a/app/src/main/res/layout/activity_cadastro_habilidade.xml
+++ b/app/src/main/res/layout/activity_cadastro_habilidade.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:contexto="com.thelearningproject.applogin.infraestrutura.gui.CadastroHabilidadeActivity">
+    tools:contexto="com.thelearningproject.applogin.perfil.gui.CadastroHabilidadeActivity">
 
     <Button
         android:id="@+id/BotaoInsereHabilidadeID"
