--- a/app/src/main/res/layout/activity_alterar_senha.xml
+++ b/app/src/main/res/layout/activity_alterar_senha.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.thelearningproject.applogin.infraestrutura.gui.AlterarSenhaActivity">
+    tools:context="com.thelearningproject.applogin.pessoa.gui.AlterarSenhaActivity">
 
     <TextView
         android:id="@+id/op1"
