--- a/app/src/main/res/layout/activity_cadastro_necessidade.xml
+++ b/app/src/main/res/layout/activity_cadastro_necessidade.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.thelearningproject.applogin.infraestrutura.gui.CadastroNecessidadeActivity">
+    tools:context="com.thelearningproject.applogin.perfil.gui.CadastroNecessidadeActivity">
 
 
     <EditText
