--- a/app/src/main/res/layout/activity_habilidade.xml
+++ b/app/src/main/res/layout/activity_habilidade.xml
@@ -53,4 +53,13 @@
         android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true" />
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@drawable/tick"
+        android:layout_above="@+id/habilidadeentrada"
+        android:layout_toLeftOf="@+id/habilidade"
+        android:layout_toStartOf="@+id/habilidade" />
+
 </RelativeLayout>
