Implementação da tela Buscar no Fragment. Foi criado um novo método para remover o teclado em um fragment.

--- a/app/src/main/res/layout/fragment_main_busca.xml
+++ b/app/src/main/res/layout/fragment_main_busca.xml
@@ -1,14 +1,44 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.MainBuscaFragment"
-    android:background="@color/colorAccent">
+    android:orientation="vertical"
+    android:padding="8dp"
+    tools:context="layout.MainBuscaFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-</FrameLayout>
+        <EditText
+            android:id="@+id/editTextBuscaID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/botaoBuscaID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="21dp"
+            android:layout_marginStart="21dp"
+            android:text="@string/bottom_nav_title2" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_resultadoID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/textBlack" />
+
+    <ListView
+        android:id="@+id/listViewID"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+</LinearLayout>
