Criando um FAB nas telas de cadastro de habilidade e necessidade. Setando titulos correspondentes e a criação de um metodo futuro para que não haja uma activity para cadastro de hab/nec.

--- a/app/src/main/res/layout/fragment_main_perfil.xml
+++ b/app/src/main/res/layout/fragment_main_perfil.xml
@@ -24,7 +24,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/colorSecondary">
+        android:background="@color/colorAccent">
 
         <TextView
             android:id="@+id/nomeUsuarioID"
