--- a/app/src/main/res/layout/activity_listar_habilidades.xml
+++ b/app/src/main/res/layout/activity_listar_habilidades.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,16 +11,14 @@
         android:id="@+id/listaHabilidades"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/btnInserirHabilidade" />
+        android:layout_alignParentTop="true"/>
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnInserirHabilidade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Criar nova habilidade"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_white_24dp" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
