--- a/app/src/main/res/layout/activity_cadastro_habilidade.xml
+++ b/app/src/main/res/layout/activity_cadastro_habilidade.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="25dp"
     tools:contexto="com.thelearningproject.applogin.perfil.gui.CadastroHabilidadeActivity">
 
-    <Button
-        android:id="@+id/BotaoInsereHabilidadeID"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_hab"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Inserir"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="189dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="25dp">
 
-    <EditText
-        android:id="@+id/entradaMateriaID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Insira nova habilidade"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="92dp"
-        android:layout_marginTop="157dp"
-        android:gravity="center"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        <EditText
+            android:id="@+id/entradaMateriaID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="@string/cadastrarNovaHabilidade"
+            android:textSize="22sp"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+</android.support.design.widget.CoordinatorLayout>
