Implementação da descrição no perfil e mais melhorias pontuais.  Em breve teremos um local onde a descrição será mostrada. Provisoriamente, ela está sendo exibida por meio de um toast executado quando você clica no fragmento do perfil.  Você pode alterar a descrição por meio da tela de configurações, onde também é possível alterar nome, e-mail, senha, etc.  Aparentemente tudo ok, mas testem!

--- a/app/src/main/res/layout/activity_habilidade.xml
+++ b/app/src/main/res/layout/activity_habilidade.xml
@@ -10,7 +10,8 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="25dp">
+        android:padding="25dp"
+        android:weightSum="1">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -24,10 +25,11 @@
         <TextView
             android:id="@+id/necessidade"
             style="@style/dicaCadastro"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="@string/dica1"
-            android:layout_marginTop="20dp" />
+            android:layout_weight="0.08" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_hab"
