--- a/app/src/main/res/layout/activity_confima_recuperar.xml
+++ b/app/src/main/res/layout/activity_confima_recuperar.xml
@@ -3,41 +3,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
+    android:background="@drawable/gradient"
     tools:context="com.thelearningproject.applogin.pessoa.gui.ConfimaRecuperarActivity">
 
-    <TextView
-        android:id="@+id/dica"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:text="@string/dica" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_hab"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp">
-
-        <EditText
-            android:id="@+id/codigoID"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/dica"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Digite o código recebido"
-            android:inputType="number" />
+            android:text="@string/dica" />
 
-        <Button
-            android:id="@+id/botaoReenviarID"
-            android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_hab"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Enviar novo código" />
+            android:layout_marginTop="10dp">
 
-        <Button
-            android:id="@+id/botaoConfirmaID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/continuar" />
+            <EditText
+                android:id="@+id/codigoID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/codigoRecebido"
+                android:textSize="20sp"
+                android:inputType="number" />
 
-    </android.support.design.widget.TextInputLayout>
+            <Button
+                android:id="@+id/botaoConfirmaID"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/continuar" />
+
+            <Button
+                android:id="@+id/botaoReenviarID"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/enviarCodigo" />
+
+        </android.support.design.widget.TextInputLayout>
+
+    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
