--- a/app/src/main/res/layout/activity_recuperar_conta.xml
+++ b/app/src/main/res/layout/activity_recuperar_conta.xml
@@ -3,45 +3,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
+    android:background="@drawable/gradient"
     tools:contexto="com.thelearningproject.applogin.pessoa.gui.RecuperarContaActivity">
 
-    <TextView
-        android:id="@+id/titulo"
-        style="@style/headerText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:text="@string/titulo" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp">
 
-    <TextView
-        android:id="@+id/informativo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="16.5dp"
-        android:text="@string/informativo" />
-
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_num"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="16.5dp">
-
-        <EditText
-            android:id="@+id/telefoneID"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/titulo"
+            style="@style/headerText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="phone" />
+            android:text="@string/titulo" />
 
-        <Button
-            android:id="@+id/botaoConfirmaID"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/informativo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/continuar" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_marginTop="20dp"
+            android:text="@string/informativo" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_num"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/telefoneID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/telefone"
+                android:textSize="20sp"
+                android:inputType="phone" />
+
+            <Button
+                android:id="@+id/botaoConfirmaID"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/continuar" />
+
+        </android.support.design.widget.TextInputLayout>
+
+    </LinearLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
